@@ -1,3 +1,2 @@
 <?php
-require_once(dirname(__DIR__)."/vendor/lucinda/mvc/src/AttributesFactory.php");
 require_once(dirname(__DIR__)."/vendor/lucinda/mvc/src/Application.php");
